# production_scheduler

./: README.md  patches.txt  pyproject.toml
patches/: create_production_scheduler_board.py
production_scheduler/: api.py  hooks.py  modules.txt
production_scheduler/page/production_scheduler_board/: production_scheduler_board.html  production_scheduler_board.js  production_scheduler_board.py
production_scheduler/public/css/: production_queue.css
production_scheduler/public/js/: production_queue.js
production_scheduler/report/production_scheduler_queue/: production_scheduler_queue.js  production_scheduler_queue.py
