[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "production_scheduler"
version = "0.0.1"
description = "Production Scheduler App"
authors = [
    { name = "Dharshan JSB Stack", email = "dharshanjsb@gmail.com" }
]
dependencies = []

[tool.bench.frappe-dependencies]
frappe = "~=16.0"
